# MGranul

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
app/: README.md  main.js  package-lock.json  package.json
app/e2e/: app.e2e-spec.ts
app/src/: app-theme.scss  index.html  styles.css
app/src/app/: app.component.html  app.module.ts
cpp/: CMakeLists.txt  build.sh  build_opencv2.sh
cpp/lib/: crossCorrelation.txt  granul.cpp  granul.h  meikon.h
docker/: Dockerfile
java/: pom.xml
java/src/main/java/br/org/: Image.java  MGranulServer.java
lib/: granul.cpp  granul.h  meikon.h
python/: build_python.sh  cv_np_granul.cpp  granultypes.h  msgranul.cpp  setup.py  test.py  test_notebook.ipynb
